tests/macros/password/default.rs
fn main() {
    let q = requestty::questions![Password { default: todo!() }];
}
